--- a/test_bib.bib
+++ b/test_bib.bib
@@ -87,7 +87,7 @@
 },
 }
 
-@techreport{linder-linsley_archaeological_1992-1,
+@report{linder-linsley_archaeological_1992-1,
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Section} {IIB}},
