--- a/test_bib.bib
+++ b/test_bib.bib
@@ -4,10 +4,11 @@
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological {Investigations} at {Cooper} {Lake}, {Delivery} {Order} {Numbers} 2, 3, \& 4, 1987; {Volume} 2: {Chapters} 11-17 and {Appendices}},
 	shorttitle = {Archaeological {Investigations} at {Cooper} {Lake}, {Volume} 2},
-	url_Library = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9911203433403716},
+	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9911203433403716},
 	institution = {Archeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {McGregor, Daniel E. and Green, Melissa M. and Jurney, David H. and Martin, William A. and Moir, Randall W. and Saunders, Joe W. and Crane, Cathy J. and Perttula, Timothy K. and Winchell, Frank and Yates, Bonnie C. and Ferring, C. Reid and Burnett, Barbara A. and Harmon, Anna and Haas, Herbert and Fullington, Richard and Cleaveland, Malcolm K.},
 	year = {1996},
+	note = {U.S. Army Corps of Engineers Contract DACW63-87-D-0017},
 	keywords = {Cooper Lake, Delta County, Hopkins County, Texas},
 	annote = {U.S. Army Corps of Engineers Contract DACW63-87-D-0017
 },
@@ -18,10 +19,11 @@
 	type = {U.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological {Investigations} at {Cooper} {Lake}, {Delivery} {Order} {Numbers} 2, 3, \& 4, 1987; {Volume} 1: {Chapters} 1-10},
 	shorttitle = {Archaeological {Investigations} at {Cooper} {Lake}, {Volume} 1},
-	url_Library = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9911203433403716},
+	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9911203433403716},
 	institution = {Archeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {McGregor, Daniel E. and Green, Melissa M. and Jurney, David H. and Martin, William A. and Moir, Randall W. and Saunders, Joe W. and Crane, Cathy J. and Perttula, Timothy K. and Winchell, Frank and Yates, Bonnie C. and Ferring, C. Reid and Burnett, Barbara A. and Harmon, Anna and Haas, Herbert and Fullington, Richard and Cleaveland, Malcolm K.},
 	year = {1996},
+	note = {U.S. Army Corps of Engineers Contract DACW63-87-D-0017},
 	keywords = {Cooper Lake, Delta County, Hopkins County, Texas},
 	annote = {U.S. Army Corps of Engineers Contract DACW63-87-D-0017
 },
@@ -31,10 +33,12 @@
 	address = {Dallas, Texas},
 	type = {Report prepared for the {General} {Services} {Administration}, {Region} 7, {Fort} {Worth}, {Texas}},
 	title = {Archaeological, {Historical}, and {Architectural} {Investigations} of {Building} 2 ({41CF129}) at {Fort} {Brown}, {Brownsville}, {Texas}},
+	url = {NOT YET DIGITIZED - SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Moir, Randall W. and Quinn, Allen G. and Freuden, Charles M. and Winchell, Frank and Steiborner, Robert and Jurney, David H. and Kimball, Louis},
 	month = jan,
 	year = {1993},
+	note = {General Services Administration Contract GS-07P-87-HUD-0132},
 	keywords = {Cameron County, Texas},
 	annote = {General Services Administration Contract GS-07P-87-HUD-0132
 },
@@ -44,12 +48,12 @@
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological {Survey} of {Cooper} {Lake}, {Delivery} {Order} {Number} 7, 1989, {Cultural} {Resource} {Studies} for {Cooper} {Lake}, {Hopkins} and {Delta} {Counties}, {Texas}},
-	url_Library = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9910718143403716},
+	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9910718143403716},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Jurney, David H. and Bohlin, Jeffery and Linder-Linsley, Sue E. and Caran, S. Christopher and Pedler, David R. and Adovasio, James M. and Buyce, Raymond and Crane, Cathy J. and Harris, Michael S. and Masucci, Maria and Pedler, Catherine L. and Winchell, Frank and Young, William},
 	month = jul,
 	year = {1993},
-	note = {1993\_Jurney\_et\_al\_Archaeological\_Survey\_Cooper\_Lake\_7.pdf},
+	note = {U.S. Army Corps of Engineers Contract DACW63-87-D-0017},
 	keywords = {Cooper Lake, Delta County, Hopkins County, Texas},
 	annote = {Currently just have lousy DTIC scan.
 },
@@ -61,7 +65,7 @@
 	address = {Dallas, Texas},
 	type = {U.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological {Survey} of {Cooper} {Lake}, {Delivery} {Order} {Number} 6, 1989, {Cultural} {Resource} {Studies} for {Cooper} {Lake}, {Hopkins} and {Delta} {Counties}, {Texas}},
-	url_Library = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9910757443403716},
+	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9910757443403716},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Jurney, David H. and Bohlin, Jeffery and Adovasio, James M. and Buyce, Raymond and Mandel, Rolfe and McElhaney, Jackie and Pedler, Catherine L. and Winchell, Frank},
 	month = mar,
@@ -76,25 +80,29 @@
 
 @techreport{linder-linsley_archaeological_1992,
 	address = {Dallas, Texas},
-	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
+	type = {Report prepared for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Section} {IIC}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Linder-Linsley, Sue E.},
 	month = jun,
 	year = {1992},
+	note = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176},
 	keywords = {Collections, Texas},
 	annote = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176
 },
 }
 
-@report{linder-linsley_archaeological_1992-1,
+@techreport{linder-linsley_archaeological_1992-1,
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Section} {IIB}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Linder-Linsley, Sue E.},
 	month = jun,
 	year = {1992},
+	note = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176},
 	keywords = {Collections, Texas},
 	annote = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176
 },
@@ -104,11 +112,12 @@
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Section} {IIA}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Linder-Linsley, Sue E.},
 	month = jun,
 	year = {1992},
-	note = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176},
+	note = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176},
 	keywords = {Collections, Texas},
 }
 
@@ -116,6 +125,7 @@
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Section} {I}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Linder-Linsley, Sue E.},
 	month = jun,
@@ -130,11 +140,134 @@
 	address = {Dallas, Texas},
 	type = {Report prepard for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological and {Historical} {Collections} {Inventory} and {Assessment}, {Initial} {Draft}: {Appendices}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
 	institution = {Department of Anthropology, Southern Methodist University},
 	author = {Linder-Linsley, Sue E.},
 	month = jun,
 	year = {1992},
+	note = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176},
 	keywords = {Collections, Texas},
 	annote = {U.S. Army Corps of Engineers Contract  DACW63-92-M-0176
+},
+}
+
+@techreport{crass_archaeological_1992,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Dallas} {Parks} and {Recreation} {Department}},
+	title = {An {Archaeological} {Survey} of the {Dallas} {Arboretum} and {Botanical} {Gardens} and {DeGolyer} {Estate}, {Dallas} {County}, {Texas}},
+	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9910504583403716},
+	language = {English},
+	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
+	author = {Crass, David Colin and Moir, Randall W.},
+	month = aug,
+	year = {1992},
+	note = {Texas Antiquities Permit 693},
+	annote = {No physical copy in ARC. Available in Fondren Library.
+},
+	annote = {Texas Antiquities Permit 693
+},
+}
+
+@techreport{jurney_archaeological_1991,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Huitt}-{Zollars}, {Parsons} {Brinckerhoff}, {Inc}., and {DART}},
+	title = {Archaeological {Resources} {Impact} {Potential} of the {South} {Oak} {Cliff} {Locally} {Preferred} {Alternative}, {Dallas}, {Texas}},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Jurney, David H. and Moir, Randall W. and Dorward, Don and Weston, Gathel M. and Girard, Jeff and Linder-Linsley, Sue E. and McElhaney, Jackie and Payton, Donald and Winchell, Frank and Young, Bill},
+	month = mar,
+	year = {1991},
+	note = {Huitt-Zollars Contract 04-0218-01, Parsons Brinckerhoff Task 18, subcontract SCR 90-037},
+	keywords = {Dallas County, Texas},
+	annote = {Huitt-Zollars Contract 04-0218-01, Parsons Brinckerhoff Task 18, subcontract SCR 90-037
+},
+}
+
+@techreport{dorward_management_1991,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Huit}-{Zollars} and {Parsons} {Brinckerhoff}, {Inc}.},
+	title = {Management {Summary} on {Intensive} {Archaeological} {Survey} of the {South} {Oak} {Cliff} {LPA} {Line}},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Dorward, Don and Winchell, Frank and Moir, Randall W. and Dorward, David and Dorward, Will and Mbutu, Stephen and Jurney, David H.},
+	month = may,
+	year = {1991},
+	note = {1991\_Dorward\_et\_al\_Management\_Summary\_on\_Intensive\_Archaeological\_Survey\_of\_the\_South\_Oak\_Cliff\_LPA\_Line.pdf},
+	keywords = {Dallas County, Texas},
+	annote = {Huitt-Zollars Contract 04-0218-01
+},
+}
+
+@techreport{moir_stabilization_1990,
+	address = {Dallas, Texas},
+	type = {Report prepared for the {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
+	title = {Stabilization {Work} at the {Penn} {Site} ({41DL192}): {Vegetation} {Control} and {Selected} {Tasks} at the {Old} {Penn} {House}, 1918 {Barn}, and {Related} {Structures}},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Moir, Randall W. and Freeman, Joe and Dorward, Donald and Jurney, David H.},
+	month = nov,
+	year = {1990},
+	note = {Report prepared for the U.S. Army Corps of Engineers, Fort Worth District},
+	keywords = {Dallas County, Texas},
+}
+
+@techreport{jurney_archaeological_1990,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Parsons} {Brinckerhoff}, {Inc}.},
+	title = {Archaeological {Resources} {Impact} {Potential} of {South} {Oak} {Cliff} {Alternatives}, {Dallas}, {Texas}},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Jurney, David H. and Moir, Randall W. and Dorward, Don and Weston, Gathel M. and Girard, Jeff and Linder-Linsley, Sue E. and McElhaney, Jackie and Payton, Donald and Young, Bill},
+	month = mar,
+	year = {1990},
+	note = {Report prepared for Parsons Brinckerhoff, Inc.},
+	keywords = {Dallas County, Texas},
+}
+
+@techreport{jurney_archaeological_1990-1,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Historic} {Preservation} {League}, {Inc}., {Dallas}, {Texas}},
+	title = {Archaeological and {Historical} {Investigations} of the {Francis} {Asbury} {Brown} {Farmstead}},
+	url = {NOT YET DIGITIZED - SENT TO CENTRAL LIBRARIES 5/26},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Jurney, David H. and Moir, Randall W.},
+	year = {1990},
+	note = {Report prepared for Historic Preservation League, Inc., Dallas, Texas},
+	keywords = {Dallas County, Texas},
+}
+
+@techreport{jurney_archaeological_1990-2,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Parsons} {Brinckerhoff}, {Inc}.},
+	title = {Archaeological {Resources} {Impact} {Potential} of {North} {Central} {Line}, {Dallas}, {Texas}},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Jurney, David H. and McElhaney, Jackie and Weston, Gathel M. and Payton, Donald and Girard, Jeff},
+	month = mar,
+	year = {1990},
+	note = {Report prepared for Parsons Brinckerhoff, Inc.},
+	keywords = {Dallas County, Texas},
+}
+
+@techreport{dorward_archaeological_1990,
+	address = {Dallas, Texas},
+	type = {Report prepared for {Parsons} {Brinckerhoff}, {Inc}.},
+	title = {Archaeological {Resources} {Impact} {Potential} of {West} {Oak} {Cliff}, {Dallas}, {Texas}},
+	url = {NOT YET DIGITIZED -- SENT TO CENTRAL LIBRARIES 5/26},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Dorward, Don and Jurney, David H. and Weston, Gathel M. and McElhaney, Jackie},
+	month = mar,
+	year = {1990},
+	note = {Report prepared for Parsons Brinckerhoff, Inc.},
+	keywords = {Dallas County, Texas},
+}
+
+@techreport{peter_late_1988,
+	address = {Dallas, Texas},
+	type = {Report prepared for {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
+	title = {Late {Holocene} {Prehistory} of the {Mountain} {Creek} {Drainage}},
+	number = {1},
+	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
+	author = {Peter, Duane E. and McGregor, Daniel E.},
+	month = may,
+	year = {1988},
+	note = {U.S. Army Corps of Engineers Contract DACW63-84-C-0146},
+	keywords = {Dallas County, Joe Pool Lake, Lakeview Lake, Texas},
+	annote = {U.S. Army Corps of Engineers Contract DACW63-84-C-0146
 },
 }
