--- a/test_bib.bib
+++ b/test_bib.bib
@@ -259,7 +259,6 @@
 	address = {Dallas, Texas},
 	type = {Report prepared for {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Late {Holocene} {Prehistory} of the {Mountain} {Creek} {Drainage}},
-	number = {1},
 	institution = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Peter, Duane E. and McGregor, Daniel E.},
 	month = may,
@@ -354,11 +353,10 @@
 
 @book{moir_pioneer_1987,
 	address = {Dallas, Texas},
-	series = {Richland {Creek} {Technical} {Series}},
+	series = {Richland {Creek} {Technical} {Series} {IV}},
 	title = {Pioneer {Settlers}, {Tenant} {Farmers}, and {Communities}; {Objectives}, {Historical} {Background}, and {Excavations}},
 	shorttitle = {Pioneer {Settlers}, {Tenant} {Farmers}, and {Communities}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma998021143403716},
-	number = {IV},
 	publisher = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Moir, Randall W. and Jurney, David H.},
 	year = {1987},
@@ -367,11 +365,10 @@
 
 @book{mcgregor_hunter-gatherer_1987,
 	address = {Dallas, Texas},
-	series = {Richland {Creek} {Technical} {Series}},
+	series = {Richland {Creek} {Technical} {Series} {III}},
 	title = {Hunter-{Gatherer} {Adaptations} along the {Prairie} {Margin}; {Site} {Excavations} and {Synthesis} of {Prehistoric} {Archaeology}},
 	shorttitle = {Hunter-{Gatherer} {Adaptations} along the {Prairie} {Margin}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma998021153403716},
-	number = {III},
 	publisher = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {McGregor, Daniel E. and Bruseth, James E.},
 	year = {1987},
@@ -394,11 +391,10 @@
 
 @book{jurney_historic_1987,
 	address = {Dallas, Texas},
-	series = {Richland {Creek} {Technical} {Series}},
+	series = {Richland {Creek} {Technical} {Series} {V}},
 	title = {Historic {Buildings}, {Material} {Culture}, and {People} of the {Prairie} {Margin}; {Architecture}, {Artifacts}, and {Synthesis} of {Historic} {Archaeology}},
 	shorttitle = {Historic {Buildings}, {Material} {Culture}, and {People} of the {Prairie} {Margin}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma998021133403716},
-	number = {V},
 	publisher = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Jurney, David H. and Moir, Randall W.},
 	year = {1987},
@@ -424,10 +420,9 @@
 
 @book{bruseth_introduction_1987,
 	address = {Dallas, Texas},
-	series = {Richland {Creek} {Technical} {Series}},
+	series = {Richland {Creek} {Technical} {Series} {I}},
 	title = {Introduction to the {Richland} {Creek} {Archaeological} {Project}; {Environmental} {Background} and {Cultural} {Setting}},
 	shorttitle = {Introduction to the {Richland} {Creek} {Archaeological} {Project}},
-	number = {I},
 	publisher = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Bruseth, James E. and Moir, Randall W.},
 	year = {1987},
@@ -436,10 +431,9 @@
 
 @book{bruseth_bird_1987,
 	address = {Dallas, Texas},
-	series = {Richland {Creek} {Technical} {Series}},
+	series = {Richland {Creek} {Technical} {Series} {II}},
 	title = {The {Bird} {Point} {Island} and {Adams} {Ranch} {Sites}; {Methodological} and {Theoretical} {Contributions} to {North} {Central} {Texas} {Archaeology}},
 	shorttitle = {The {Bird} {Point} {Island} and {Adams} {Ranch} {Sites}},
-	number = {II},
 	publisher = {Archaeology Research Program, Institute for the Study of Earth and Man, Southern Methodist University},
 	author = {Bruseth, James E. and Martin, William A.},
 	year = {1987},
@@ -523,7 +517,6 @@
 	type = {Prepared for {U}.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Archaeological {Investigations} at {Lakeview} {Lake}: 1979 and 1980},
 	language = {English},
-	number = {2},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Raab, L. Mark and McIntyre, Allan J. and Bruseth, James E. and McGregor, Daniel E. and Ferring, C. Reid and Reese, Nancy G. and Murry, Phillip A. and Pheasant, David R. and Woosley, Anne and Yates, Bonnie C.},
 	month = dec,
@@ -610,7 +603,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	type = {Prepared for the {Department} of {Urban} {Planning}, {City} of {Dallas}},
 	title = {Dallas {Archaeological} {Potential}, {Procedures} for {Locating} and {Evaluating} {Prehistoric} {Resources}},
 	shorttitle = {Dallas {Archaeological} {Potential}},
-	number = {111},
 	institution = {Archeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Skinner, S. Alan and Richner, Jeffrey J. and Johnston, Mary R.},
 	year = {1978},
@@ -675,7 +667,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	title = {Archaeological and {Ethnohistorical} {Survey} at {Tennessee} {Colony} {Lake}, {Texas}, 1975},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma994866603403716},
 	language = {English},
-	number = {104},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Richner, Jeffrey J. and Lee, T. Reed},
 	year = {1977},
@@ -698,7 +689,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	title = {New {Melones} {Cave} {Inventory} and {Evaluation} {Study} {Preliminary} {Report}: {Archaeological} {Caves}},
 	shorttitle = {An {Inventory} and {Evaluation} of the {Cave} {Resources} to be {Impacted} by the {New} {Melones} {Reservoir} {Project}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9920525083403716},
-	number = {103},
 	institution = {Archeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {McEachern, J. Michael and Grady, Mark A.},
 	year = {1977},
@@ -714,7 +704,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	title = {An {Archaeological} {Evaluation} of {Selected} {Parts} of the {Cedar} {Creek} {Watershed}, {Kaufman} {County}, {Texas} ({FRS} 22, {36A}, {68A}, 35, 46, 118 {Rev}.)},
 	shorttitle = {An {Archaeological} {Evaluation} of {Selected} {Parts} of the {Cedar} {Creek} {Watershed}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma994824253403716},
-	number = {105},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Lynott, Mark J. and Banks, Kimball M.},
 	month = aug,
@@ -730,7 +719,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	type = {{USDA}, {Soil} {Conservation} {Service}, {Temple}, {Texas}},
 	title = {Survey and {Testing} in the {Elm} {Creek} {Watershed}, {Upper} {Colorado} {River} {Drainage}, {Texas} ({Floodwater} {Retarding} {Structures} 1-10)},
 	shorttitle = {Survey and {Testing} in the {Elm} {Creek} {Watershed}},
-	number = {106},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Lynott, Mark J.},
 	year = {1977},
@@ -744,7 +732,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	address = {Dallas, Texas},
 	type = {{USDA}, {Soil} {Conservation} {Service}, {Temple}, {Texas}},
 	title = {An {Archaeological} {Evaluation} of {Parts} of the {Richland} {Creek} {Watershed}},
-	number = {101},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Lynott, Mark J.},
 	year = {1977},
@@ -758,7 +745,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	address = {Dallas, Texas},
 	type = {Albert {Halff} {Associates}, {Inc}.},
 	title = {An {Archaeological} {Evaluation} of {Parts} of {Beals} {Creek}, {Big} {Spring}, {Texas}},
-	number = {102},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Lynott, Mark J.},
 	year = {1977},
@@ -785,7 +771,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	address = {Dallas, Texas},
 	type = {U.{S}. {National} {Park} {Service}},
 	title = {Archeological {Assessment} of {Arkansas} {Post}},
-	number = {96},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Westbury, William A.},
 	year = {1976},
@@ -811,7 +796,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	type = {{USDA}, {Forest} {Service}, {Lufkin}, {Texas}},
 	title = {A {Tramway} in {Sabine} {National} {Forest}, {Texas}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma994216033403716},
-	number = {97},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Skinner, S. Alan},
 	month = oct,
@@ -841,7 +825,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	address = {Dallas, Texas},
 	type = {U.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {An {Archaeological} {Suvey} of {Areas} to be {Affected} by the {East} {Fork} {Channel} and {Levee} {Improvement} {Project} - {Dallas} and {Kaufman} {Counties}, {Texas}},
-	number = {91},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Richner, Jeffrey J.},
 	year = {1976},
@@ -867,7 +850,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	type = {Prepared for the {Fort} {Concho} {Museum}, {City} of {San} {Angelo}},
 	title = {Archaeological {Investigations} at {Fort} {Concho}, {Texas}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995114613403716},
-	number = {98},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Mobley, Charles M.},
 	year = {1976},
@@ -883,7 +865,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	title = {Preliminary {Report} on {Test} {Excavations} at the {Bear} {Creek} {Shelter} ({X41HI163}; 41-26-{D7}-8), {Lake} {Whitney}, {Texas}},
 	shorttitle = {Preliminary {Report} on {Test} {Excavations} at the {Bear} {Creek} {Shelter} at {Lake} {Whitney}, {Texas}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma994222373403716},
-	number = {94},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Lynott, Mark J.},
 	month = jul,
@@ -927,7 +908,6 @@ Review of the historical pattern of change indicated that as land use changed fr
 	type = {U.{S}. {Army} {Corps} of {Engineers}, {Fort} {Worth} {District}},
 	title = {Brownwood {Dam} {Modification}, an {Archaeological} {Assessment}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma994950633403716},
-	number = {95},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Kirby, Foster E. and Moir, Randall W.},
 	year = {1976},
@@ -1988,11 +1968,10 @@ It is concluded that the Turtle Creek Watershed is not a natural or a cultural a
 
 @book{skinner_historical_1971,
 	address = {Austin, Texas},
-	series = {Archaeological {Report}},
+	series = {Archaeological {Report} 21},
 	title = {Historical {Archeology} of the {Neches} {Saline}, {Smith} {County}, {Texas}},
 	shorttitle = {Historical {Archeology} of the {Neches} {Saline}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma997046263403716},
-	number = {21},
 	publisher = {Texas Historical Commission},
 	author = {Skinner, S. Alan},
 	month = aug,
@@ -2099,10 +2078,9 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{woodall_archaeological_1969,
 	address = {Dallas, Texas},
-	series = {Contributions in {Anthropology}},
+	series = {Contributions in {Anthropology} 3},
 	title = {Archaeological {Exavations} in the {Toledo} {Bend} {Reservoir}, 1966},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma997688633403716},
-	number = {3},
 	publisher = {Southern Methodist University},
 	author = {Woodall, J. Ned},
 	year = {1969},
@@ -2114,11 +2092,10 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{skinner_archaeological_1969,
 	address = {Dallas, Texas},
-	series = {Contributions in {Anthropology}},
+	series = {Contributions in {Anthropology} 5},
 	title = {Archaeological {Investigations} at the {Sam} {Kaufman} {Site}, {Red} {River} {County}, {Texas}},
 	copyright = {Submitted to the National Park Service},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma997703673403716},
-	number = {5},
 	author = {Skinner, S. Alan and Harris, R. King and Anderson, Keith M. and Butler, Barbara and Ferring, C. Reid and King, H. Gill and Mayer, Craig},
 	year = {1969},
 	note = {U.S. National Park Service Contract No. 14-10-3:931-4.},
@@ -2129,9 +2106,8 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{lorrain_archaeological_1969,
 	address = {Dallas, Texas},
-	series = {Contributions in {Anthropology}},
+	series = {Contributions in {Anthropology} 4},
 	title = {Archaeological {Excavations} in the {Fish} {Creek} {Reservoir}},
-	number = {4},
 	publisher = {Southern Methodist University},
 	author = {Lorrain, Dessamae},
 	year = {1969},
@@ -2142,10 +2118,9 @@ A second major portion of the paper describes the excavations of two late Caddoa
 }
 
 @book{hsu_appraisal_1969,
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 3},
 	title = {Appraisal of the {Archeological} {Resources} of {Big} {Cypress} ({Franklin} {County}) {Reservoir}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995325093403716},
-	number = {3},
 	author = {Hsu, Dick Ping and Sciscenti, James V. and Skinner, S. Alan},
 	year = {1969},
 	note = {U.S. National Park Service Purchase Order No. 931-145},
@@ -2155,10 +2130,9 @@ A second major portion of the paper describes the excavations of two late Caddoa
 }
 
 @book{hsu_appraisal_1969-1,
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 4},
 	title = {Appraisal of the {Archeological} {Resources} of {Titus} {County} {Reservoir}, {Titus}, {Camp} and {Franklin} {Counties}, {Texas}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995080023403716},
-	number = {4},
 	author = {Hsu, Dick Ping},
 	month = jul,
 	year = {1969},
@@ -2166,10 +2140,9 @@ A second major portion of the paper describes the excavations of two late Caddoa
 }
 
 @book{gilmore_san_1969,
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 16},
 	title = {The {San} {Xavier} {Missions}: {A} {Study} in {Historical} {Site} {Identification}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/aeja38/alma997810293403716},
-	number = {16},
 	author = {Gilmore, Kathleen Kirk},
 	month = mar,
 	year = {1969},
@@ -2178,10 +2151,9 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{gibson_archaeological_1969,
 	address = {Dallas, Texas},
-	series = {Contributions in {Anthropology}},
+	series = {Contributions in {Anthropology} 6},
 	title = {Archaeological {Survey} at {Caddo} {Lake}, {Louisiana} and {Texas}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995409483403716},
-	number = {6},
 	publisher = {Southern Methodist University},
 	author = {Gibson, Jon L.},
 	year = {1969},
@@ -2268,9 +2240,8 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{parsons_archeological_1967,
 	address = {Austin, Texas},
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 7},
 	title = {Archeological {Investigations} in {Crosby} and {Dickens} {Counties}, {Texas} during the {Winter}, 1966-1967},
-	volume = {7},
 	shorttitle = {Archeological {Investigations} in {Crosby} and {Dickens} {Counties}, {Texas} 1966-1967},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma9917304123403716},
 	publisher = {State Building Commission},
@@ -2282,9 +2253,8 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{gilmore_documentary_1967,
 	address = {Austin, Texas},
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 9},
 	title = {A {Documentary} and {Archeological} {Investigation} of {Presidio} {San} {Luis} de las {Amarillas} and {Mission} {Santa} {Cruz} de {San} {Sabá}, {Menard} {Count}, {Texas}; {A} {Preliminary} {Report}},
-	volume = {9},
 	shorttitle = {A {Documentary} and {Archeological} {Investigation} of {Presidio} {San} {Luis} de las {Amarillas} and {Mission} {Santa} {Cruz} de {San} {Sabá}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma997802513403716},
 	publisher = {State Building Commission},
@@ -2296,9 +2266,8 @@ A second major portion of the paper describes the excavations of two late Caddoa
 
 @book{hays_archeological_1966,
 	address = {Austin, Texas},
-	series = {State {Building} {Commission} {Archeological} {Program} {Report}},
+	series = {State {Building} {Commission} {Archeological} {Program} {Report} 4},
 	title = {Archeological {Exploration} at {Fort} {Lancaster}, 1966, {A} {Preliminary} {Report}},
-	volume = {4},
 	shorttitle = {Archeological {Exploration} at {Fort} {Lancaster}, 1966},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995508693403716},
 	publisher = {State Building Commission},
@@ -2321,7 +2290,6 @@ A second major portion of the paper describes the excavations of two late Caddoa
 	address = {Dallas, Texas},
 	title = {The {Historic} and {Prehistoric} {Archaeological} {Resources} of the {Squaw} {Creek} {Reservoir}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma992772323403716},
-	number = {10},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Skinner, S. Alan and Humphreys, Gerald K.},
 	year = {1973},
@@ -2332,7 +2300,6 @@ A second major portion of the paper describes the excavations of two late Caddoa
 	address = {Dallas, Texas},
 	title = {The {Hopewell} {School} {Site}, {A} {Late} {Archaic} {Campsite} in the {Central} {Brazos} {River} {Valley}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995512503403716},
-	number = {19},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Gallagher, Joseph G. and Bearden, Susan E.},
 	year = {1976},
@@ -2342,7 +2309,6 @@ A second major portion of the paper describes the excavations of two late Caddoa
 	address = {Dallas, Texas},
 	title = {Archaeological {Inventory} of {Brantley} {Reservoir}, {New} {Mexico}: {Models} of {Regional} {Culture} {History}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995582023403716},
-	number = {18},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Henderson, Mark S.},
 	year = {1976},
@@ -2353,7 +2319,6 @@ A second major portion of the paper describes the excavations of two late Caddoa
 	address = {Dallas, Texas},
 	title = {Archaeological {Resources} at {Los} {Esteros} {Lake}, {New} {Mexico}},
 	url = {https://smu.primo.exlibrisgroup.com/permalink/01SMU_INST/6ctoa/alma995671783403716},
-	number = {17},
 	institution = {Archaeology Research Program, Department of Anthropology, Southern Methodist University},
 	author = {Levine, Frances and Mobley, Charles M.},
 	year = {1976},
